--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
     # - run: npm ci
     - run: npm i -g yarn && yarn
     - run: npm run build --if-present
-    # - run: npm test
+    - run: npm test
