--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+        node-version: [14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     # - run: npm ci
     - run: npm i -g yarn && yarn
-    - run: npm run build --if-present
-    - run: npm test
+    - run: yarn build
+    - run: yarn test
