--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "ct": "git-cz",
     "prettier-format": "prettier --write .",
     "deploy": "cd ./docs && sh docs_build.sh",
-    "test": "jest"
+    "test": "jest",
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@babel/runtime": "^7.9.2",
