--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "ct": "git-cz",
     "prettier-format": "prettier --write .",
     "deploy": "cd ./docs && sh docs_build.sh",
-    "test": "jest"
+    "test": "jest",
+    "test:cov": "jest && npm run coverall",
+    "coverall": "cat coverage/lcov.info | coveralls"
   },
   "dependencies": {
     "@babel/runtime": "^7.9.2",
@@ -91,6 +93,7 @@
     "colorful": "^2.1.0",
     "commander": "^6.2.0",
     "commitizen": "^3.0.7",
+    "coveralls": "^3.1.1",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cz-lerna-changelog": "^2.0.2",
