fix: 修复package启动命令

--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
     "oceanengine"
   ],
   "scripts": {
-    "dev": "npm run build:entry && webpack-dev-server --config build/webpack.site.dev.js",
+    "dev": "npm run build:entry && webpack-dev-server --config ./build/webpack.site.dev.js",
     "dev:theme": "cross-env THEME=true npm run dev",
     "dev:aweme": "cross-env THEME=aweme npm run dev",
     "lint": "npm run lint:script && npm run lint:style",
     "lint:script": "eslint . --ext .js,.ts,.tsx,.vue,.js --quiet",
     "lint:style": "stylelint \"src/**/*.less\"",
     "fix:style": "stylelint \"src/**/*.less\" --fix",
-    "build": "npm run build:compile && npm run build:dist",
-    "build:compile": "cross-env NODE_ENV=production ./build/run.js compile",
-    "build:dist": "./build/run.js dist",
-    "build:entry": "./build/run.js build-entry",
-    "build-script": "node build/build-lib.js",
-    "build-script:entry": "node build/build-entry.js",
+    "build": "npm run ./build:compile && npm run build:dist",
+    "build:compile": "cross-env NODE_ENV=production node ./build/run.js compile",
+    "build:dist": "node ./build/run.js dist",
+    "build:entry": "node ./build/run.js build-entry",
+    "build-script": "node ./build/build-lib.js",
+    "build-script:entry": "node ./build/build-entry.js",
     "ct": "git-cz",
     "prettier-format": "prettier --write .",
     "deploy": "cd ./docs && sh docs_build.sh",
