--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lint:script": "eslint . --ext .js,.ts,.tsx,.vue,.js --quiet",
     "lint:style": "stylelint \"src/**/*.less\"",
     "fix:style": "stylelint \"src/**/*.less\" --fix",
-    "build": "npm run ./build:compile && npm run build:dist",
+    "build": "npm run build:compile && npm run build:dist",
     "build:compile": "cross-env NODE_ENV=production node ./build/run.js compile",
     "build:dist": "node ./build/run.js dist",
     "build:entry": "node ./build/run.js build-entry",
